# pass-in-NLW

node/: README.md  (+3 more)
python-django/: pyproject.toml
python-django/pass_in/: manage.py
python-django/pass_in/core/: errors.py  models.py  urls.py  views.py
python-django/pass_in/core/migrations/: 0001_initial.py  0002_attendee_attendee_unique_attendee.py  0003_checkin.py
python-django/pass_in/core/serializers/: __init__.py  attendee_serializer.py  badge_serializer.py  event_serializer.py
python-django/pass_in/core/utils/: generate_slug.py
python-django/pass_in/core/views/: attendees.py  events.py
python-django/pass_in/pass_in/: asgi.py  settings.py  urls.py  wsgi.py
python-flask/: .gitignore  app.py  pyproject.toml  pyrightconfig.json  storage.db
python-flask/src/data/: attendees_handler.py  ckeck_in_handler.py  event_handler.py
python-flask/src/errors/: error_handler.py  errors_types.py
python-flask/src/http_types/: http_request.py  http_response.py
python-flask/src/main/routes/: attendees_routes.py  check_in_routes.py  event_routes.py
python-flask/src/main/server/: server.py
python-flask/src/models/entities/: attendees.py  check_ins.py  events.py
python-flask/src/models/repository/: attendees_repository.py  check_ins_repository.py  events_repository.py
python-flask/src/models/settings/: connection.py
rust-axum/: .dockerignore  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml
rust-axum/.github/workflows/: ci.yml
rust-axum/deploy/: values.yaml
rust-axum/deploy/templates/: secret.yaml
rust-axum/k8s/: deployment.yaml  service.yaml
rust-axum/migrations/2024-05-10-210916_create_events_table/: up.sql
rust-axum/migrations/2024-05-12-081523_create_attendees_table/: down.sql  up.sql
rust-axum/migrations/2024-05-12-205506_create_check_ins_table/: down.sql  up.sql
rust-axum/migrations/2024-05-12-210520_add_cascades/: down.sql  up.sql
rust-axum/src/: error.rs  main.rs  models.rs  schema.rs  state.rs  utils.rs
rust-axum/src/domain/: attendee.rs  event.rs  mod.rs
rust-axum/src/dtos/: create_event.rs  get_attendee_badge.rs  get_attendees.rs  get_event.rs  mod.rs  register_for_event.rs
rust-axum/src/handlers/: check_in.rs  create_event.rs  get_attendee_badge.rs  get_attendees.rs  get_event.rs  mod.rs  register_for_event.rs
rust-axum/src/infra/: mod.rs
rust-axum/src/routes/: attendees.rs  mod.rs
rust-axum/src/services/: attendee.rs  event.rs  mod.rs
rust-axum/src/utils/: mod.rs  slug.rs
(+56 files in other folders)
