[tool.poetry]
name = "python-flask"
version = "0.1.0"
description = ""
authors = ["Igor Cardoso <igorgcardoso@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
sqlalchemy = "^2.0.29"
pytest = "^8.1.1"
flask = "^3.0.3"
flask-cors = "^4.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
