[package]
name = "pass-in"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
axum = { version = "0.7.5", features = ["http2", "macros"] }
chrono = { version = "0.4.38", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["sqlite"] }
diesel = { version = "2.1.6", features = [
    "sqlite",
    "uuid",
    "serde_json",
    "chrono",
    "returning_clauses_for_sqlite_3_35",
] }
diesel_migrations = "2.1.0"
dotenvy = "0.15.7"
regex = "1.10.4"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
thiserror = "1.0.60"
tokio = { version = "1.37.0", features = ["full"] }
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
unicode-normalization = "0.1.23"
url = "2.5.0"
utoipa = { version = "4.2.3", features = ["axum_extras", "openapi_extensions", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "7.0.1", features = ["axum"] }
uuid = { version = "1.8.0", features = ["v4", "serde"] }
validator = { version = "0.18.1", features = ["derive"] }
